--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.6",
+    "live-server": "^1.2.1",
     "prettier": "^2.4.1",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1"
