--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
-    "*.{js,css,md,yml,html}": "prettier --write"
+    "*.{js,css,md,yml,html}": "prettier --write",
+    "*.{js,css,md}": "prettier --write"
   }
 }
