--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,9 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
-      - uses: actions/setup-node@v14.18.1
-      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v2
       - uses: artiomtr/jest-coverage-report-action@v2.0-rc.5
         with:
+          node-version: "14"
           github-token: ${{ secrets.GITHUB_TOKEN }}
           threshold: 60
