--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
+    "@testing-library/jest-dom": "^5.16.1",
     "@types/jest": "^27.0.3",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
