--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "webpack build --node-env production",
     "test": "jest",
-    "lint": "prettier --check .",
-    "lint:fix": "prettier --write .",
+    "lint": "eslint . --ext .js,.ts & prettier --check . & tsc --noEmit",
+    "lint:fix": "eslint . --fix --ext .js,.ts & prettier --write .",
     "prepare": "husky install",
     "dev": "webpack serve --open"
   },
@@ -30,8 +30,11 @@
     "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.1",
     "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
@@ -50,12 +53,16 @@
     "mini-css-extract-plugin": "^2.4.5",
     "prettier": "^2.5.0",
     "style-loader": "^3.3.1",
+    "typescript": "^4.6.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
+    "*.{js,ts}": [
+      "prettier --write",
+      "eslint --cache --fix --ext .js,.ts"
+    ],
     "*.{js,css,md,yml,html}": "prettier --write"
   }
 }
